testdata/error/complex_posting.ledger.error.txt
error: failed to evaluate the expression: expected 0 or an amount with the single commodity
 --> okane/testdata/error/complex_posting.ledger:4:50
  |
3 | 2024/09/01 Shop
4 |     Expenses                                     (123.45 CHF + 1 USD)
  |                                                  ^^^^^^^^^^^^^^^^^^^^ expected 0 or an amount with the single commodity
5 |     Assets:Banks
  |
